# web-crawler

./: .gitignore  Cargo.toml  LICENSE.md  README.md  test.ipynb
resources/data/: data.md
src/: main.rs  read_file.rs
